2009-03-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Add todo item.

	* COPYING: New file.

2009-01-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/RacerInterface.cpp: Remove debug output.

	* src/Answer.cpp: Fix g++4.3 compile errors by #include missing
	headers, see <http://gcc.gnu.org/gcc-4.3/porting_to.html>.
	* src/RacerNRQLBuilder.cpp: Likewise.
	* src/TCPStream.cpp: Likewise.
	* src/Terms.cpp: Likewise.

2008-12-15  DAO Tran Minh  <dao@kr.tuwien.ac.at>
	
	* include/DFOutputBuilder.h: New file.
	* src/DFOutputBuilder.cpp: Likewise.
	
	* src/DFConverter.cpp: Add hasDefaults().
	* src/DFProcessor.cpp: Likewise.
	
	* src/Default.cpp: Add getConclusionNames().
	* src/Defaults.cpp: Likewise.
	
	* src/RacerInterface.cpp: Only return the dfoutputbuilder if any
	default was specified in the input.

2008-12-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/wires3.dlp: New test case.
	* examples/wires3.owl: Likewise.

2008-12-09  DAO Tran Minh  <dao@kr.tuwien.ac.at>
	
	* include/DFProcessor.h: Add a rule for constant_.
	
	* src/Default.cpp: More dom predicates for transformation \Upsilon.

2008-12-01  DAO Tran Minh  <dao@kr.tuwien.ac.at>

	* include/Defaults.h: Add size().
	* src/Defaults.cpp: Likewise.
	
	* src/DFProcessor: Remove "\n" at the end of each other stuff.
	
	* src/DFConverter: Distinguish between having defaults and not.

2008-11-29  DAO Tran Minh  <dao@kr.tuwien.ac.at>

	* src/DefaultParser.cpp: Remove.
	* include/DefaultParser.h: Likewise.
	
	* src/Pred1Dim.cpp: New file.
	* src/Pred2Dim.cpp: Likewise.
	* src/DLAtoms.cpp: Likewise.
	* src/DFProcessor.cpp: Likewise.
	* include/Pred1Dim.h: New file.
	* include/Pred2Dim.h: Likewise.
	* include/DLAtoms.h: Likewise.
	* include/DFProcessor.h: Likewise.

	* src/RacerInterface.cpp: Remove option --dfpruning.

	* src/Defaults.cpp: Remove all functions related to creating pruning rules.

	* src/DLAtom.cpp: Add property naf to a dl-atom.
	